--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "psr/log": "^1.0"
     },
     "require-dev": {
-        "symfony/symfony": "2.*"
+        "symfony/symfony": "^2.0 || ^3.0"
     },
     "suggest": {
         "symfony/symfony": "To use as a bundle"
